--- a/next.htm
+++ b/next.htm
@@ -6,8 +6,11 @@
 <link href="_css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+<header>
 <h2>HTML Essential Training</h2>
 <h1>Next Steps</h1>
+</header>
+<nav>
 <ul>
   <li><a href="intro.htm" title="Introduction to HTML">Introduction to HTML</a></li>
   <li><a href="syntax.htm" title="HTML syntax">HTML syntax</a></li>
@@ -15,7 +18,11 @@
   <li><a href="reference.htm" title="HTML Reference">HTML reference</a></li>
   <li><a href="next.htm" title="Next steps">Next steps</a></li>
 </ul>
+</nav>
+<section>
 <p>Once you master the basics of authoring HTML, you&rsquo;ll need focus on what your next steps will be. If you&rsquo;re an aspiring web designer, you&rsquo;ll need to dive deeper into HTML, CSS, and JavaScript. If you&rsquo;re maintaining a corporate or personal site through a CMS, you&rsquo;ll need to focus on how the CMS works, and the most efficient ways to edit and maintain content. On this page I&rsquo;ll give you some basic advice on how to approach learning web design and point you towards additional resources that can help you along the way.</p>
+</section>
+<section>
 <h3>Learning Web Design</h3>
 <p>&ldquo;Web design&rdquo; is a pretty open-ended term. Often people who are new to web design feel overwhelmed at everything there is to learn. That&rsquo;s understandable, but just remember that it&rsquo;s like any other discipline; with proper dedication and focus you&rsquo;ll progress quickly. Here&rsquo;s my favorite advice to new web designers on learning web design:</p>
 <h4>Learn how the web works.</h4>
@@ -26,6 +33,8 @@
 <p>The web is constantly evolving. Even if you become the absolute best there is in a specific field, chances are new techniques and approaches will come along within the year that will make your current skill set less desirable. Understand that being a good web designer means embracing the changing nature of the web.</p>
 <h4>Break things!</h4>
 <p>There is no better teacher than experience. Build and experiment constantly. Ask yourself, <i>&ldquo;what would happen if I?...&rdquo;</i> or <i>&ldquo;wonder if I could build?...&rdquo;</i> and then go out and build it. If you&rsquo;re like me, you&rsquo;ll fail a good bit of the time, but the process of trying things and breaking them will make you that much better. <strong>Always challenge yourself.</strong></p>
+</section>
+<section>
 <h3>Web Design Resources</h3>
 <p><b>lynda.com online training library</b></p>
 <p><b>HTML related titles</b></p>
@@ -42,6 +51,9 @@
 <p>One of the best online resources for web designers and developers. Great collection of articles, tutorials, and references.</p>
 <p><b>HTML5 Rocks</b></p>
 <p>Once you&rsquo;ve got the basics down, check out sites like HTML5 Rocks. This site feature articles, tutorials, and other resources that help you keep up with the evolving web. </p>
+</section>
+<footer>
 <p>&copy; lynda.com | follow me and lynda.com on Twitter! @jameswillweb @lyndadotcom</p>
+</footer>
 </body>
 </html>
