--- a/reference.htm
+++ b/reference.htm
@@ -6,8 +6,11 @@
 <link href="_css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+<header>
 <h2>HTML Essential Training</h2>
 <h1>HTML Reference</h1>
+</header>
+<nav>
 <ul>
   <li><a href="intro.htm" title="Introduction to HTML">Introduction to HTML</a></li>
   <li><a href="syntax.htm" title="HTML syntax">HTML syntax</a></li>
@@ -15,7 +18,11 @@
   <li><a href="reference.htm" title="HTML Reference">HTML reference</a></li>
   <li><a href="next.htm" title="Next steps">Next steps</a></li>
 </ul>
+</nav>
+<section>
 <p>On this page you&rsquo;ll find a quick reference to common HTML terms and a table of frequently used <a href="#named">named character entities</a>.</p>
+</section>
+<section>
 <h3>HTML Terms</h3>
 <dl>
   <dt>Attribute</dt>
@@ -61,6 +68,8 @@
   <dt>W3C </dt>
   <dd>The W3C, or <b>World Wide Web Consortium</b>, is the standards body responsible for authoring the HTML specification. </dd>
 </dl>
+</section>
+<section>
 <table border="1" cellspacing="0" cellpadding="0" summary="A quick reference of named character entities, including an example of the character, a description, and the entity code.">
   <caption>
 Common Named Character Entities 
@@ -156,6 +165,9 @@ Common Named Character Entities
     <td><b>&amp;mdash;</b></td>
   </tr>
 </table>
+</section>
+<footer>
 <p>&copy; lynda.com | follow me and lynda.com on Twitter! @jameswillweb @lyndadotcom</p>
+</footer>
 </body>
 </html>
