HTML Challenge assignment 3

--- a/reference.htm
+++ b/reference.htm
@@ -70,7 +70,7 @@
 </dl>
 </section>
 <section>
-<table border="1" cellspacing="0" cellpadding="0" summary="A quick reference of named character entities, including an example of the character, a description, and the entity code.">
+<table id="named" border="1" cellspacing="0" cellpadding="0" summary="A quick reference of named character entities, including an example of the character, a description, and the entity code.">
   <caption>
 Common Named Character Entities 
   </caption>
