--- a/links.htm
+++ b/links.htm
@@ -57,7 +57,7 @@
 <pre>&lt;a href=&rdquo;faq.htm#camp&rdquo;&gt;Read our FAQ on camping.&lt;/a&gt;</pre>
 </section>
 <footer>
-<p>&copy; lynda.com | follow me and lynda.com on Twitter! @jameswillweb @lyndadotcom</p>
+<p><a href="http://lynda.com" target="_blank" title="Visit Lynda.com">&copy; lynda.com</a> | follow me and lynda.com on Twitter! @jameswillweb <a href="https://twitter.com/lynda" title="Follow @Lynda on Twitter">@lyndadotcom</p>
 </footer>
 </body>
 </html>
